# scara_ws

./: .gitignore  README.md
pymoveit2/: CMakeLists.txt  package.xml
pymoveit2/examples/: pick_and_drop.py  pick_and_place.py  vision_pick_and_place.py
scara_bringup/: CMakeLists.txt  package.xml
scara_bringup/launch/: bringup.launch.py
scara_controller/: CMakeLists.txt  package.xml
scara_controller/config/: scara_controllers.yaml
scara_controller/launch/: controller.launch.py  scara_controller.launch.py  slider_controller.launch.py
scara_controller/scara_controller/: slider_controller.py
scara_description/: CMakeLists.txt  package.xml
scara_description/launch/: display.launch.py  gazebo.launch.py
scara_description/meshes/: base_link.stl  camera_link.stl  column_link.stl  forearm_link.stl  left_finger_link.stl  right_finger_link.stl  shoulder_link.stl  wrist_link.stl
scara_description/rviz/: display.rviz
scara_description/urdf/: arm.xacro  camera.xacro  camera_fixed.xacro  gazebo.xacro  materials.xacro  ros2control.xacro  scara.urdf.xacro
scara_description/worlds/: custom_world.world  pick_and_place.world
scara_moveit/: CMakeLists.txt  package.xml
scara_moveit/config/: initial_positions.yaml  joint_limits.yaml  moveit_controllers.yaml  ompl_planning.yaml  ros2_controllers.yaml  scara.srdf
scara_moveit/launch/: moveit.launch.py
scara_scripts/: package.xml  setup.cfg  setup.py
scara_vision/: package.xml  setup.cfg  setup.py
scara_voice/: api.txt.example  package.xml  requirements.txt  setup.cfg  setup.py
(+9 files in other folders)
